<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#E1DFDF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityGuratHat">

    <TextView
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:text="@string/guratlyk_haty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/reg_head_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/pygg_birligi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/pygg_birligi"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_head_text" />

    <EditText
        android:id="@+id/kysymy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/kysymy"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pygg_birligi" />

    <EditText
        android:id="@+id/san_belgisi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/san_belgisi"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kysymy" />

    <EditText
        android:id="@+id/ondurulen_yyly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/ondurilen_yyly"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/san_belgisi" />

    <TextView
        android:id="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ondurulen_yyly"
        android:text="Bellige alnan senesi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <DatePicker
        android:id="@+id/bellige_alynan_sene"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:calendarViewShown="false"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:datePickerMode="spinner"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <Button
        android:layout_margin="10dp"
        android:id="@+id/gurat_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bellige_alynan_sene"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/yatda_sakla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>