<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:text="@string/surujilik_sahadatnamasy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/reg_head_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/profile"
        app:layout_constraintTop_toBottomOf="@id/reg_head_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="Profile" />
    <Button
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        android:id="@+id/surat_sayla"
        android:text="@string/sayla_surat"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/reg_input_fam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/familyasy"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surat_sayla" />

    <EditText
        android:id="@+id/reg_input_ady"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/ady"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_input_fam" />

    <EditText
        android:id="@+id/reg_input_atasynyn_ady"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/atasynyn_ady"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_input_ady"/>

    <EditText
        android:id="@+id/reg_input_doglanY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/doglan_yeri"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_input_atasynyn_ady"/>

    <TextView
        android:id="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_input_doglanY"
        android:text="Doglan güni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <DatePicker
        android:id="@+id/reg_input_doglanG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:calendarViewShown="false"
        app:layout_constraintTop_toBottomOf="@id/reg_input_doglanY"
        android:datePickerMode="spinner"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <EditText
        android:id="@+id/reg_input_berlenY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/berlen_yeri"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_input_doglanG" />

    <TextView
        android:id="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_input_berlenY"
        android:text="Berlen wagty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <DatePicker
        android:id="@+id/reg_input_berlenS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:calendarViewShown="false"
        app:layout_constraintTop_toBottomOf="@id/reg_input_berlenY"
        android:datePickerMode="spinner"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <Button
        android:layout_margin="10dp"
        android:id="@+id/reg_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_input_berlenS"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/yatda_sakla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>